Add xata and fetch data from the dev database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Codegen",
         "nestjs",
-        "Todos"
+        "Todos",
+        "Xata"
     ],
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
