Setting up and use Configuration

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # API key used by the CLI and the SDK
 # Make sure your framework/tooling loads this file on startup to have it available for the SDK
 XATA_API_KEY=xau_pXBuyywOtlchJBuDKaUtZLkJg3ToiQzF1
+# Xata branch to use when creating the xata client
+XATA_DATACLIENT_BRANCH=dev
 # Xata branch that will be used if there's not a xata branch with the same name as your git branch
 XATA_FALLBACK_BRANCH=dev
